[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gui/pause.gd" type="Script" id=1]

[node name="pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -116.0
margin_right = 75.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 24.0
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -92.0
margin_right = 64.0
margin_bottom = -60.0
text = "Resume"

[node name="Map" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -36.0
margin_right = 64.0
margin_bottom = -4.0
text = "Map"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 20.0
margin_right = 64.0
margin_bottom = 52.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 76.0
margin_right = 64.0
margin_bottom = 108.0
text = "Quit"
[connection signal="pressed" from="Panel/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/Map" to="." method="_on_Map_pressed"]
[connection signal="pressed" from="Panel/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]
